--- a/src/gui/IOTab.fxml
+++ b/src/gui/IOTab.fxml
@@ -12,19 +12,20 @@
 	<children>
 		<Pane layoutX="12.0" layoutY="50.0" prefHeight="37.0" prefWidth="625.0">
 			<children>
-				<TextField layoutX="167.0" layoutY="1.0" prefHeight="26.0"
-					prefWidth="391.0" />
-				<Button layoutX="567.0" mnemonicParsing="false" text="Enter" />
+				<TextField fx:id="sourceFolderFullPath" layoutX="167.0"
+					layoutY="1.0" prefHeight="26.0" prefWidth="391.0" />
+				<Button fx:id="sourceFolderPathSubmit" layoutX="567.0"
+					mnemonicParsing="false" text="Enter" onAction="#handleSourceFolderPathSubmit" />
 				<Text layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0"
 					text="Source folder's full path:" />
 			</children>
 		</Pane>
 		<Pane layoutX="12.0" layoutY="88.0" prefHeight="37.0" prefWidth="625.0">
 			<children>
-				<TextField layoutX="167.0" layoutY="5.0" prefHeight="26.0"
-					prefWidth="128.0" />
-				<Button layoutX="568.0" layoutY="3.0" mnemonicParsing="false"
-					text="Enter " />
+				<TextField id="csvFileName" layoutX="167.0" layoutY="5.0"
+					prefHeight="26.0" prefWidth="128.0" />
+				<Button id="csvFileNameSubmit" layoutX="568.0" layoutY="3.0"
+					mnemonicParsing="false" text="Enter " />
 				<Text layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0"
 					text="Unified CSV file name:" />
 			</children>
@@ -39,14 +40,16 @@
 		</Pane>
 		<Pane layoutX="12.0" layoutY="166.0" prefHeight="37.0" prefWidth="625.0">
 			<children>
-				<Button layoutX="558.0" mnemonicParsing="false" text="Delete" />
+				<Button id="deleteExistingData" layoutX="558.0"
+					mnemonicParsing="false" text="Delete" />
 				<Text layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0"
 					text="Delete all existing data: (will permanently delete all existing data.)" />
 			</children>
 		</Pane>
 		<Pane layoutX="12.0" layoutY="198.0" prefHeight="37.0" prefWidth="625.0">
 			<children>
-				<Button layoutX="558.0" mnemonicParsing="false" text="Convert" />
+				<Button id="convertCsvToKml" layoutX="558.0" mnemonicParsing="false"
+					text="Convert" />
 				<Text layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0"
 					text="Convert unified CSV file to a runnable KML file:"
 					wrappingWidth="390.99999219179153" />
