--- a/src/gui/AlgoithemsTab.fxml
+++ b/src/gui/AlgoithemsTab.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -9,7 +10,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="391.0" prefWidth="569.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainController">
    <children>
-      <Pane layoutX="28.0" layoutY="14.0" prefHeight="162.0" prefWidth="495.0">
+      <Pane layoutX="28.0" layoutY="25.0" prefHeight="149.0" prefWidth="495.0">
          <children>
             <HBox layoutX="20.0" layoutY="43.0">
                <children>
@@ -19,27 +20,28 @@
             </HBox>
             <Button layoutX="258.0" layoutY="43.0" mnemonicParsing="false" onAction="#onSubmitClick" text="Enter." />
             <Text fill="#5707e1" layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Algorithem 1 :" />
-            <HBox layoutX="357.0" layoutY="123.0">
+            <HBox layoutX="356.0" layoutY="89.0">
                <children>
                   <Label text="Alt : " />
                   <TextField fx:id="mac32" onAction="#onSUBMIT" prefHeight="25.0" prefWidth="90.0" />
                </children>
             </HBox>
-            <HBox layoutX="18.0" layoutY="123.0">
+            <HBox layoutX="74.0" layoutY="89.0">
                <children>
                   <Label text="Lat :  " />
                   <TextField fx:id="mac321" onAction="#onSUBMIT" prefHeight="25.0" prefWidth="90.0" />
                </children>
             </HBox>
-            <HBox layoutX="201.0" layoutY="123.0">
+            <HBox layoutX="221.0" layoutY="89.0">
                <children>
                   <Label text="Lon : " />
                   <TextField fx:id="mac322" onAction="#onSUBMIT" prefHeight="25.0" prefWidth="90.0" />
                </children>
             </HBox>
+            <Label layoutX="14.0" layoutY="84.0" prefHeight="17.0" prefWidth="70.0" text="Data :" />
          </children>
       </Pane>
-      <Pane layoutX="28.0" layoutY="187.0" prefHeight="178.0" prefWidth="527.0">
+      <Pane layoutX="28.0" layoutY="173.0" prefHeight="192.0" prefWidth="527.0">
          <children>
             <Text fill="#5707e1" layoutX="8.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Algorithem  2 :" />
             <HBox layoutX="-27.0" layoutY="43.0" />
@@ -50,7 +52,34 @@
                   <TextField fx:id="t_name" text="Enter mac please:" />
                </children>
             </HBox>
-            <TextField fx:id="t_name" layoutX="332.0" layoutY="112.0" text="Enter mac please:" />
+            <HBox layoutX="255.0" layoutY="89.0">
+               <children>
+                  <Label text="Enter Signal please : " />
+                  <TextField fx:id="t_name" />
+               </children>
+            </HBox>
+            <Group layoutX="23.0" layoutY="89.0">
+               <children>
+                  <HBox>
+                     <children>
+                        <Label text="InputMac 1 : " />
+                        <TextField fx:id="mac1" onAction="#onSUBMIT" text="Enter mac 1 please:" />
+                     </children>
+                  </HBox>
+                  <HBox layoutY="23.0">
+                     <children>
+                        <Label text="InputMac 2 : " />
+                        <TextField fx:id="mac11" onAction="#onSUBMIT" text="Enter mac 2 please:" />
+                     </children>
+                  </HBox>
+                  <HBox layoutY="50.0">
+                     <children>
+                        <Label text="InputMac 3 : " />
+                        <TextField fx:id="mac12" onAction="#onSUBMIT" text="Enter mac 3 please:" />
+                     </children>
+                  </HBox>
+               </children>
+            </Group>
          </children>
       </Pane>
       <HBox layoutX="35.0" layoutY="110.0" />
