--- a/src/gui/AlgorithmsTab.fxml
+++ b/src/gui/AlgorithmsTab.fxml
@@ -15,27 +15,27 @@
             <HBox layoutX="20.0" layoutY="43.0">
                <children>
                   <Label text="InputMac : " />
-                  <TextField fx:id="MacBox" text="Enter mac please:" />
+                  <TextField fx:id="mac" onAction="#onSUBMIT" text="Enter mac please:" />
                </children>
             </HBox>
-            <Button layoutX="258.0" layoutY="43.0" mnemonicParsing="false" onAction="#handleCheckMacSubmit" text="Enter." />
+            <Button layoutX="258.0" layoutY="43.0" mnemonicParsing="false" onAction="#onSubmitClick" text="Enter." />
             <Text fill="#5707e1" layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Algorithem 1 :" />
             <HBox layoutX="356.0" layoutY="89.0">
                <children>
                   <Label text="Alt : " />
-                  <TextField fx:id="Alt" prefHeight="25.0" prefWidth="90.0" />
+                  <TextField fx:id="mac_alt" prefHeight="25.0" prefWidth="90.0" />
                </children>
             </HBox>
             <HBox layoutX="74.0" layoutY="89.0">
                <children>
                   <Label text="Lat :  " />
-                  <TextField fx:id="Lat" prefHeight="25.0" prefWidth="90.0" />
+                  <TextField fx:id="mac_lat" prefHeight="25.0" prefWidth="90.0" />
                </children>
             </HBox>
             <HBox layoutX="221.0" layoutY="89.0">
                <children>
                   <Label text="Lon : " />
-                  <TextField fx:id="Lon" prefHeight="25.0" prefWidth="90.0" />
+                  <TextField fx:id="mac_lon" prefHeight="25.0" prefWidth="90.0" />
                </children>
             </HBox>
             <Label layoutX="14.0" layoutY="84.0" prefHeight="17.0" prefWidth="70.0" text="Data :" />
@@ -45,17 +45,17 @@
          <children>
             <Text fill="#5707e1" layoutX="8.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Algorithem  2 :" />
             <HBox layoutX="-27.0" layoutY="43.0" />
-            <Button layoutX="278.0" layoutY="41.0" mnemonicParsing="false" onAction="#handleCheckStringSubmit" text="Enter." />
+            <Button layoutX="278.0" layoutY="41.0" mnemonicParsing="false" onAction="#onSubmitClick" text="Enter." />
             <HBox layoutX="13.0" layoutY="41.0" prefHeight="25.0" prefWidth="265.0">
                <children>
                   <Label text="Enter Strng please : " />
-                  <TextField fx:id="InputCheckString" text="Enter mac please:" />
+                  <TextField fx:id="t_name" text="Enter mac please:" />
                </children>
             </HBox>
             <HBox layoutX="255.0" layoutY="89.0">
                <children>
                   <Label text="Enter Signal please : " />
-                  <TextField fx:id="pSignal" />
+                  <TextField fx:id="t_name" />
                </children>
             </HBox>
             <Group layoutX="23.0" layoutY="89.0">
@@ -63,24 +63,24 @@
                   <HBox>
                      <children>
                         <Label text="InputMac 1 : " />
-                        <TextField fx:id="MacBox1" text="Enter mac 1 please:" />
+                        <TextField fx:id="mac1" onAction="#onSUBMIT" text="Enter mac 1 please:" />
                      </children>
                   </HBox>
                   <HBox layoutY="23.0">
                      <children>
                         <Label text="InputMac 2 : " />
-                        <TextField fx:id="MacBox2" text="Enter mac 2 please:" />
+                        <TextField fx:id="mac11" onAction="#onSUBMIT" text="Enter mac 2 please:" />
                      </children>
                   </HBox>
                   <HBox layoutY="50.0">
                      <children>
                         <Label text="InputMac 3 : " />
-                        <TextField fx:id="MacBox3" text="Enter mac 3 please:" />
+                        <TextField fx:id="mac12" onAction="#onSUBMIT" text="Enter mac 3 please:" />
                      </children>
                   </HBox>
                </children>
             </Group>
-            <Button layoutX="264.0" layoutY="127.0" mnemonicParsing="false" onAction="#handleInputCheckMac1Submit" text="Enter." />
+            <Button layoutX="264.0" layoutY="127.0" mnemonicParsing="false" onAction="#onSubmitClick" text="Enter." />
          </children>
       </Pane>
       <HBox layoutX="35.0" layoutY="110.0" />
